syntax = "proto3";

package com.road.yishi.proto.player;

message UserPin {
  int32 pin = 1;
  string phone = 2;
}
